<resources>
    <string name="app_name">MuseBox</string>
    <string name="app_tagline">Your local library with a clean dark-mode look.</string>
    <string name="welcome_back">Welcome back</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="name_hint">Full name</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="remember_me">Remember me on this device</string>
    <string name="accept_terms">I agree to the basic app demo terms</string>
    <string name="switch_to_signup">Need an account? Sign up</string>
    <string name="switch_to_login">Already registered? Login</string>
    <string name="quick_picks">Library</string>
    <string name="trending_playlists">Your playlists</string>
    <string name="library_permission_needed">Allow audio access to scan songs from your device.</string>
    <string name="grant_permission">Grant permission</string>
    <string name="no_songs_found">No local audio files were found yet.</string>
    <string name="songs_loaded">%1$d songs loaded</string>
    <string name="create_playlist">Create playlist</string>
    <string name="playlist_name_hint">Playlist name</string>
    <string name="playlists">Playlists</string>
    <string name="logout">Logout</string>
    <string name="now_playing">Now playing</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove</string>
    <string name="empty_playlist">This playlist is empty. Add songs from your library.</string>
    <string name="add_songs">Add songs</string>
    <string name="search_hint">Search songs, artists</string>
    <string name="home">Home</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="history">History</string>
    <string name="stats">Stats</string>
    <string name="account">Account</string>
    <string name="player_subtitle">Play songs from your library and playlists</string>
    <string name="mini_player_default">Pick a song to begin</string>
    <string name="notification_channel_name">Playback</string>
    <string name="notification_channel_description">Shows the current song playing in MuseBox.</string>
    <string name="playlist_created">Playlist created</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="song_added_to_playlist">Song added to playlist</string>
    <string name="song_removed_from_playlist">Song removed from playlist</string>
    <string name="account_stats">%1$s\n%2$d songs | %3$d artists | %4$d albums</string>
    <string name="home_subtitle">Browse your songs and jump into playback.</string>
    <string name="playlist_subtitle">Build simple playlists using SharedPreferences.</string>
    <string name="player_hint">Tap songs from home or a playlist to start playback.</string>
    <string name="notification_text_playing">Playing from your local library</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_confirm">Delete %1$s? This cannot be undone.</string>
    <string name="account_initial_placeholder">A</string>
</resources>
